feat: MAKER v0.2.0 — ensemble voting, adaptive k, semantic matching, benchmarks
Sprints 4-7 delivering post-MVP features:

- Multi-model ensemble voting (RoundRobin, CostAware, ReliabilityWeighted)
  with 87.5%+ cost savings via cost-aware routing
- Adaptive k-margin (EMA-based KEstimator with configurable bounds)
- Semantic matching (CandidateMatcher trait, EmbeddingMatcher, CodeMatcher)
- Domain benchmarks: coding tasks, math/logic, data analysis
- BENCHMARKS.md with aggregated results and acceptance criteria
- Migration guide (MIGRATION-v0.2.0.md) — fully backward compatible
- New examples: coding_task.rs, ensemble_demo.rs
- Weekly CI benchmark workflow
- 538 tests, 0 failures, clippy clean

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maker"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "MAKER Framework - Zero-error LLM agent execution via SPRT voting"
 license = "MIT"
@@ -33,4 +33,20 @@ path = "src/bin/maker-mcp.rs"
 
 [[bench]]
 name = "cost_scaling"
+harness = false
+
+[[bench]]
+name = "ensemble_comparison"
+harness = false
+
+[[bench]]
+name = "coding_tasks"
+harness = false
+
+[[bench]]
+name = "math_logic"
+harness = false
+
+[[bench]]
+name = "data_analysis"
 harness = false
