--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ repository = "https://github.com/zircote/maker-rs"
 [features]
 default = []
 code-matcher = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript"]
+prometheus = ["dep:prometheus", "dep:once_cell"]
 
 [dependencies]
+clap = { version = "4", features = ["derive"] }
+clap_complete = "4"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
 serde = { version = "1", features = ["derive"] }
@@ -18,6 +21,9 @@ serde_json = "1"
 tokio = { version = "1", features = ["full", "sync", "rt", "time", "signal"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+humantime = "2"
+prometheus = { version = "0.13", optional = true }
+once_cell = { version = "1", optional = true }
 tree-sitter = { version = "0.24", optional = true }
 tree-sitter-rust = { version = "0.23", optional = true }
 tree-sitter-python = { version = "0.23", optional = true }
@@ -30,6 +36,10 @@ wiremock = "0.6"
 [[bin]]
 name = "maker-mcp"
 path = "src/bin/maker-mcp.rs"
+
+[[bin]]
+name = "maker-cli"
+path = "src/bin/maker-cli.rs"
 
 [[bench]]
 name = "cost_scaling"
