--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ prometheus = ["dep:prometheus", "dep:once_cell"]
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 clap_complete = "4"
-reqwest = { version = "0.12", features = ["json", "blocking"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
 rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
