--- a/deny.toml
+++ b/deny.toml
@@ -29,6 +29,7 @@ allow = [
     "Unicode-DFS-2016",
     "CC0-1.0",
     "MPL-2.0",  # Weak copyleft, file-level
+    "CDLA-Permissive-2.0",  # Community Data License Agreement Permissive (webpki-roots)
 ]
 
 # Note: Licenses not in the allow list are automatically denied
@@ -69,7 +70,13 @@ deny = [
 version = 2
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
-ignore = []
+# Ignored advisories (with justification)
+ignore = [
+    # protobuf vulnerability from prometheus (no fixed version of prometheus available yet)
+    # prometheus 0.13.x depends on protobuf 2.x; protobuf 3.x is a breaking change
+    # Risk is low as we don't parse untrusted protobuf data
+    { id = "RUSTSEC-2024-0437", reason = "transitive dep from prometheus; no update available" },
+]
 
 # =============================================================================
 # Sources - Allowed Registries
