feat: add arithmetic demo for random-error validation
- New arithmetic_demo.rs validates MAKER error correction
- Multi-digit add/subtract/multiply with configurable difficulty
- Random errors (unlike Hanoi's systematic errors) are correctable
- Result: 50/50 problems correct with 2.7 samples average
- Add rand dependency for problem generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tree-sitter-javascript = { version = "0.23", optional = true }
 
 [dev-dependencies]
 proptest = "1"
+rand = "0.8"
 wiremock = "0.6"
 
 [[bin]]
