--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,13 +66,17 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate coverage
+        env:
+          IGNORE_REGEX: '(main|maker-mcp|research-validation)\.rs'
         run: |
           cargo llvm-cov --all-features --lcov --output-path lcov.info \
-            --ignore-filename-regex '(main\.rs|maker-mcp\.rs)'
+            --ignore-filename-regex "$IGNORE_REGEX"
       - name: Check coverage threshold
+        env:
+          IGNORE_REGEX: '(main|maker-mcp|maker-cli|research-validation)\.rs'
         run: |
           cargo llvm-cov --all-features --fail-under-lines 85 \
-            --ignore-filename-regex '(main\.rs|maker-mcp\.rs|maker-cli\.rs)'
+            --ignore-filename-regex "$IGNORE_REGEX"
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
